--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <style>
+      .one{
+        width: 90px;
+        height: 50px;
+        background-color: black;
+      }
+      .two{
+        width: 90px;
+        height: 50px;
+        background-color: rgb(252, 134, 134);
+      }
+    </style>
   </head>
   <body>
 <!-- 
@@ -12,7 +24,8 @@
     <button id="demo">click me</button> -->
     <!-- <img id="bulb" src="https://i.pinimg.com/736x/2d/51/da/2d51da247b0aa6014a953af777e72bb1.jpg" alt="">
     <button id="btn">button</button> -->
-    <img id="bulb" src="https://cdn-icons-png.flaticon.com/512/3141/3141531.png" alt="">
+    <!-- <img id="bulb" src="https://cdn-icons-png.flaticon.com/512/3141/3141531.png" alt=""> -->
+     <div class="one"></div>
     <button id="btn">Click</button>
     <script src="js/script.js"></script>
   </body>
