--- a/index.html
+++ b/index.html
@@ -12,19 +12,13 @@
         background-image: url(https://i.pinimg.com/1200x/0b/a5/c7/0ba5c76cc9103bfad0b9e86f9646e705.jpg);
         background-position: center;
         background-size: cover;
+        border-radius: 9px;
       }
       .two{
         width: 90px;
         height: 50px;
         background-image: url(https://i.pinimg.com/736x/d7/1a/9b/d71a9b1064d961677919b4a29974ee4b.jpg); 
-      }
-
-      .lack{
-        width: 90px;
-        height: 50px;
-        background-image: url(https://i.pinimg.com/1200x/0b/a5/c7/0ba5c76cc9103bfad0b9e86f9646e705.jpg);
-        background-position: center;
-        background-size: cover;
+        border-radius: 9px;
       }
     </style>
   </head>
@@ -36,9 +30,6 @@
     <button id="btn">button</button> -->
     <!-- <img id="bulb" src="https://cdn-icons-png.flaticon.com/512/3141/3141531.png" alt=""> -->
      <div class="one ">
-      <div class="lack two">
-
-      </div>
      </div>
     <button id="btn">Click</button>
     <script src="js/script.js"></script>
